--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     function initializeLiff() {
-      liff.init({ liffId: "2005512061-wvxpAxeY" }).then(() => {
+      liff.init({ liffId: "2005512061-Y1Nb6N58" }).then(() => {
         if (liff.isLoggedIn()) {
           liff.getProfile().then(profile => {
             const userId = profile.userId;
