--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         if (liff.isLoggedIn()) {
           liff.getProfile().then(profile => {
             const userId = profile.userId;
-            window.location.href = "https://script.google.com/macros/s/AKfycbwEcXsDIL3_FW8RPQ3eSbEXhJLTw6PBMka17Ub7PLsn_MgZcmm36UvlP2ooZT_SmLwz/exec?lineuserid=" + userId;
+            window.location.href = "https://script.google.com/macros/s/AKfycbwEcXsDIL3_FW8RPQ3eSbEXhJLTw6PBMka17Ub7PLsn_MgZcmm36UvlP2ooZT_SmLwz/exec?lineuserId=" + userId;
           }).catch(err => {
             console.error('Error getting profile:', err);
           });
@@ -28,5 +28,8 @@
 </head>
 <body>
   <h1>sorairoサービスに自動ログインしています。自動でログインされない場合は、開き直してください。</h1>
+  <br>
+<h3>SDK３０３</h3>
+  </h3>
 </body>
 </html>
