--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </script>
 </head>
 <body>
-  <h1>sorairoサービスに自動ログインしています。自動でログインされない場合は、開き直してください。</h1>
+  <h1>sorairoサービスにログインしています...</h1>
   <br>
 <h3>SDK３０３</h3>
   </h3>
