--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 </head>
 <body>
   <h1>sorairoサービスにログインしています...</h1>
-  <br>
-<h3>SDK３０３</h3>
+ <img src="https://img.icons8.com/?size=100&id=bGpdQvUlLJDg&format=gif" alt="アイコン画像">
   </h3>
 </body>
 </html>
