--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     function initializeLiff() {
-      liff.init({ liffId: "2005512061-Y1Nb6N58" }).then(() => {
+      liff.init({ liffId: "2005512061-wvxpAxeY" }).then(() => {
         if (liff.isLoggedIn()) {
           liff.getProfile().then(profile => {
             const userId = profile.userId;
-            window.location.href = "https://script.google.com/macros/s/AKfycbwEcXsDIL3_FW8RPQ3eSbEXhJLTw6PBMka17Ub7PLsn_MgZcmm36UvlP2ooZT_SmLwz/exec?lineuserId=" + userId;
+            const displayName = profile.displayName;
+            const pictureUrl = profile.pictureUrl;
+
+            // 表示名とアイコンの画像をHTMLに挿入
+            document.getElementById("greeting").innerText = `${displayName}さんこんにちは`;
+            document.getElementById("profile-picture").src = pictureUrl;
+
+            // リダイレクト処理
+            setTimeout(() => {
+              window.location.href = `https://script.google.com/macros/s/AKfycbwEcXsDIL3_FW8RPQ3eSbEXhJLTw6PBMka17Ub7PLsn_MgZcmm36UvlP2ooZT_SmLwz/exec?lineuserid=${userId}`;
+            }, 300); // 0.3秒後にリダイレクト
           }).catch(err => {
             console.error('Error getting profile:', err);
           });
@@ -25,10 +35,22 @@
       initializeLiff();
     };
   </script>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+    #profile-picture {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>sorairoサービスにログインしています...</h1>
- <img src="https://img.icons8.com/?size=100&id=bGpdQvUlLJDg&format=gif" alt="アイコン画像">
-  </h3>
+  <h1 id="greeting">sorairoサービスに自動ログインしています。</h1>
+  <img id="profile-picture" src="" alt="Profile Picture">
+  <p>自動でログインされない場合は、開き直してください。</p>
 </body>
 </html>
